# ORMS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  factories.py  manage.py  pyproject.toml  requirements.txt
.claude/: settings.json
ORMS/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ORMS/settings/: base.py  dev.py
ORMS/static/: custom.css  main.css  script.js  welcome_page.css
account/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_accountprofile.py  (+4 more)
activity/: models.py  services.py  tests.py
arivom/: account_provisioning.py  asgi.py  urls.py  wsgi.py
companies/: context.py  middleware.py  models.py  tests.py  urls.py  views.py
department/: admin.py  models.py  tests.py  urls.py  views.py
employees/: admin.py  models.py  tests.py  urls.py  views.py
members/: models.py  urls.py  views.py
nginx/: nginx.conf
notifications/: models.py  services.py  tests.py  urls.py  views.py
ormsenv/: pyvenv.cfg
requests/: admin.py  models.py  urls.py  views.py
resource/: admin.py  models.py  urls.py  views.py
resources/: admin.py  models.py  tests.py  urls.py  views.py
static/: main.css  script_notes.js
sukhra/: account_provisioning.py  asgi.py  csv_utils.py  urls.py  wsgi.py
team/: admin.py  models.py  tests.py  urls.py  views.py
templates/: alerts.html  base.html  base_it_admin.html  base_superadmin.html  base_user.html  message_alert.html  welcome_page.html
tickets/: models.py  tests.py  urls.py  views.py
(+179 files in other folders)
