[project]
name = "sukhra"
version = "0.1.0"
description = "Sukhra — office resources & ticket management, built for multiple companies"
requires-python = ">=3.11,<3.12"
dependencies = [
    "django>=4.2,<4.3",
    "django-environ>=0.11",
    "psycopg[binary]>=3.1",
    "gunicorn>=21.2",
    "whitenoise>=6.6",
    "pillow>=10.0",
    "django-session-timeout>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "django-debug-toolbar>=4.3",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["F", "E"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sukhra.settings.dev"
python_files = ["tests.py", "test_*.py"]
